# Project_NFC_1_10V

./: .gitignore  Readme.txt
Application/inc/: Config.h  ConfigDali.h  ConfigMpc.h  ConfigNfc.h  ConfigNvm.h  ErrorHandler.h  ToolboxServices.h  aes.h  comm_task.h  driver.h  filter.h  global.h  mcu_config.h  nfc_task.h  parameter.h  power_config_100w.h  power_config_150w.h  power_config_200w.h  power_config_60w.h  power_task.h  system.h  tag.h
Application/src/: aes.c  comm_task.c  driver.c  filter.c  main.c  mcu_config.c  nfc_task.c  power_task.c  system.c  tag.c
Application/src/hwdrivers/XMC1300/: Makefile  xmc1300_adc_hwdriver.c  xmc1300_boostpfc_buck_hwdriver.c  xmc1300_currentset_hw_driver.c  xmc1300_os3_hwdriver.c  xmc1300_ports_hwdriver.c  xmc1300_ports_hwdriver.h  xmc1300_utils.c  xmc1300_utils.h
Application/src/hwdrivers/XMC1300/doc/: boostpfc_hwdriver_change_register_setting_style_to_V68.docx
Application/src/modules/CRC/.svn/: wc.db
Application/src/modules/CRC/api/: crc.c  crc.h
Application/src/modules/CRC/driver_api/: crc_driver.h
Application/src/modules/CRC/driver_stm32f0xx/: crc_driver_stm32f0xx.c
Application/src/modules/CRC/driver_sw/: crc_driver_sw.c
Application/src/modules/CRC16/: crc16.c  crc16.h
Application/src/modules/CRC16/.svn/: wc.db
Application/src/modules/Dali/DaliBin/: ConfigDaliLib.h  Config_OUTD_1LP.h  Config_T6_1LP.h  Config_T6_1LP_TDC.h  Config_T6_1LP_TDC_EMCY.h
Application/src/modules/Dali/DaliServices/: ConfigDaliLib.h  DaliServices.c  MemoryBank_Debug.c  MpcAllocation.c.in  MpcServices.c  ProductionTest.c
Application/src/modules/Dali/HW/: DaliUart_XMC.c  DaliUart_XMC1xxx.h  XMC1xxx.h
Application/src/modules/Dali/iFace/: Info.txt
Application/src/modules/I2C/: CMakeLists.txt  i2c_config.c  i2c_config.h  i2c_driver.h  i2c_driver_samd21.c  i2c_driver_xmc1300.c  i2c_local.h  i2c_module.c  i2c_parameters_SAMD21.h  i2c_parameters_XMC1300.h  i2c_userinterface.h
Application/src/modules/I2C/.svn/: wc.db
Application/src/modules/MPC/Acl/: Acl.c  Acl.h  AclDefaults.h
Application/src/modules/MPC/Alloc/: Mpc.c  Mpc.h  MpcAllocation.c  MpcAllocation.h  MpcDefaultConfiguration.h  MpcDescriptors.c  MpcDescriptors.h  MpcIncludeAll.h  MpcInternal.h  MpcNfcLayout.c  MpcPerm4Legacy.c  MpcPerm4Legacy.h
Application/src/modules/MPC/AstroDim/: MemoryBank_Astro.c  MemoryBank_Astro.h
Application/src/modules/MPC/Clm/: MemoryBank_Clm.h
Application/src/modules/MPC/Csm/: MemoryBank_Csm.c  MemoryBank_Csm.h
Application/src/modules/MPC/EOL/: MemoryBank_Eol.c  MemoryBank_Eol.h
Application/src/modules/MPC/Info/: MemoryBank_Info.c  MemoryBank_Info.h  MpcInfo_Services.h
Application/src/modules/MPC/MSK/: MSK.c  MSK.h  MSK_internal.h  MSK_local.h
Application/src/modules/MPC/MSKEncryption/: CMakeLists.txt  MskEncryption.h
Application/src/modules/MPC/MSKEncryption/.svn/: wc.db
Application/src/modules/MPC/O2T/: O2T.c  O2T.h  O2T_private.h
Application/src/modules/MPC/Power/: MemoryBank_Power.c  MemoryBank_Power.h  MpcPower_Services.h
Application/src/modules/MPC/TF/: MemoryBank_Tfm.c  MemoryBank_Tfm.h
Application/src/modules/NFC/: CMakeLists.txt  Nfc.h  nfc_config.c  nfc_config.h  nfc_local.h  nfc_module.c  nfc_parameters.h  nfc_services_template.c
Application/src/modules/NFC/.svn/: wc.db
Application/src/modules/NVM/.svn/: wc.db
Application/src/modules/supplymonitor/: Makefile  SupplyMonitor.c  SupplyMonitor.h  SupplyMonitorDefaults.h  SupplyMonitorStructsInit.c  SupplyMonitorStructsInit.h  SupplyMonitor_userinterface.h  supplymonitor_local.h  supplymonitor_parameters.h  voltage_test_curves.txt
Driver/inc/: acmp.h  adc.h  eru.h  pwm.h  simu_i2c.h  sw_timer.h  tick.h  ttypes.h  usart.h  wdt.h
Driver/src/: acmp.c  adc.c  eru.c  pwm.c  simu_i2c.c  sw_timer.c  tick.c  usart.c  wdt.c
IAR_Proj/: OT_NFC_1_10V.dep  OT_NFC_1_10V.ewd  OT_NFC_1_10V.ewp  OT_NFC_1_10V.ewt  OT_NFC_1_10V_Workspace.eww  normal_config.icf  ota_config.icf
IAR_Proj/output/200W/List/: Acl.lst  DaliServices.lst  DaliUart_XMC.lst  MSK.lst  MemoryBank_Astro.lst  MemoryBank_Clm.lst  MemoryBank_Csm.lst  MemoryBank_Eol.lst  MemoryBank_Info.lst  MemoryBanksGeneric.lst  Mpc.lst  MpcAllocation.lst  MpcDescriptors.lst  MpcPerm4Legacy.lst  O2T.lst  ProductionTest.lst  acmp.lst  adc.lst  aes.lst  comm_task.lst  crc.lst  crc16.lst  crc_driver_sw.lst  driver.lst  eru.lst  filter.lst  flash_driver_xmc1300.lst  i2c_config.lst  i2c_driver_xmc1300.lst  i2c_module.lst  main.lst  mcu_config.lst  nfc_config.lst  nfc_module.lst  nvm.lst  power_task.lst  pwm.lst  simu_i2c.lst  sw_timer.lst  system.lst  (+29 more)
IAR_Proj/settings/: OT_NFC_1_10V.100W.cspy.bat  OT_NFC_1_10V.100W.general.xcl  OT_NFC_1_10V.150W.cspy.bat  OT_NFC_1_10V.150W.general.xcl  OT_NFC_1_10V.200W.cspy.bat  OT_NFC_1_10V.200W.driver.xcl  OT_NFC_1_10V.200W.general.xcl  OT_NFC_1_10V.60W.cspy.bat  OT_NFC_1_10V.60W.driver.xcl  OT_NFC_1_10V.60W.general.xcl  OT_NFC_1_10V.IP67_200W.cspy.bat  OT_NFC_1_10V.IP67_200W.general.xcl  OT_NFC_1_10V.dbgdt  OT_NFC_1_10V.dni  OT_NFC_1_10V_Workspace.wsdt  OT_NFC_1_10V_Workspace.wspos
Import/: main_nfc_backup.c  update.txt
Import/Config/: Config.h  ConfigDali.h  ConfigI2c.h  ConfigM24LRxx.h  ConfigMpc.h  ConfigMpcDefault.h  ConfigNfc.h  ConfigNfcDali.h  ConfigNvm.h  OTi DALI NON-SELV OVERVIEW.xlsx  parameter.h
Import/Config/devices/: parameter_D0AB30663.h
Import/driver_ot/: Password.h  driver.c  driver.h
Import/modules/CRC/api/: crc.c  crc.h
Import/modules/CRC/driver_api/: crc_driver.h
Import/modules/CRC/driver_sw/: crc_driver_sw.c
Import/modules/I2cExt/api/: ConfigI2cTemplate.h  i2c.c  i2c.h
Import/modules/I2cExt/driver_api/: i2c_driver.h
Import/modules/I2cExt/driver_xmc1300/: i2c_driver_xmc1300.c
Import/modules/NfcExt/M24LRxx/: ConfigM24LRxxTemplate.h  M24LRxx.c  M24LRxx.h
Import/modules/NfcExt/api/: ConfigNfcTemplate.h  nfc.c  nfc.h  nfcDali.c  nfcDali.h
Import/modules/NfcExt/doc/: nfc_fw.docx
Import/modules/fileTank/: ErrorHandler.c  ErrorHandler.h  Mpc.h  MpcDefs.h  global.h  kernel_parameters.h  x86_utils.c  x86_utils.h  xmc1300_utils.c  xmc1300_utils.h
(+46 files in other folders)
